# table-talk

./: .gitignore  Procfile  README.md  app.py  index.html  pyproject.toml  requirements.txt
evals/: conftest.py  test_golden.py  test_rubric.py  test_rules.py
